// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printRootHelp renders the bare root help snapshot 1`] = `
"Usage: ndex [options] [command]

# Agent Doc Utils

## Query
ndex query [options] [terms...]

Use this to search through global docs and topics with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
ndex topic [topic] [section]

Topics contain specialized docs, available anywhere.
ndex topic foo - view foo about/index first
ndex topic foo bar - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs

## Docs
ndex ls [where]
ndex ls . - Project docs, expanded descriptions
ndex ls ./docs/subdir - Project docs in dir
ndex ls docs/subdir - Matching local and global docs dirs
ndex ls global - Global docs, expanded descriptions

/fixture/home/.ngents/docs/architecture
  global-only.md - global architecture notes

/fixture/home/.ngents/docs/browser
  cdp.md - Chrome CDP instructions

/fixture/home/.ngents/docs/ngents
  docs.md - command index

/fixture/home/.ngents/docs/process
  qa.md - qa process notes

/fixture/repo/docs
  long-summary.md - This summary is intentionally longer than sixty-four characte...
  web-fetching.md - web browser tools

/fixture/repo/docs/architecture
  local-only.md - local architecture notes
  main.md - read this first
"
`;

exports[`printRootHelp renders the help-only root help snapshot 1`] = `
"Usage: ndex [options] [command]

# Agent Doc Utils

## Query
ndex query [options] [terms...]

Use this to search through global docs and topics with semantic search fast.
Returns matches optimized for quick context gathering with cat/sed followups.

## Topics
ndex topic [topic] [section]

Topics contain specialized docs, available anywhere.
ndex topic foo - view foo about/index first
ndex topic foo bar - learn about bar section

TOPIC  TITLE        DESCRIPTION
ios    iOS Library  Apple-platform docs
ops    Ops Notes    This summary is intentionally longer than sixty-four characte...
qmd    QMD          local search docs
"
`;
